--- a/index.html
+++ b/index.html
@@ -1,12 +1,12 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8"S>
+  <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <meta http-equiv="X-UA-Compatible" content="ie=edge">
-  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.100.2/css/materialize.min.css">
-  <link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet" integrity="sha384-wvfXpqpZZVQGK6TAh5PVlGOfQNHSoD2xbE+QkPxCAFlNEevoEH3Sl0sibVcOQVnN" crossorigin="anonymous">
-  <title>Task List</title>
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/css/materialize.min.css">
+  <link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet" integrity="sha384-wvfXpqpZZVQGK6TAh5PVlGOfQNHSoD2xbE+QkPxCAFlNEevoEH3Sl0sibVcOQVnN"
+    crossorigin="anonymous">
+    <title>Task List</title>
 </head>
 <body>
   <div class="container">
@@ -16,9 +16,9 @@
           <div class="card-content">
             <span class="card-title">Task List</span>
             <div class="row">
-              <form id="task-form">
+              <form  id="task-form">
                 <div class="input-field col s12">
-                  <input type="text" name="task" id="task">
+                  <input type="text" name="task" id ="task">
                   <label for="task">New Task</label>
                 </div>
                 <input type="submit" value="Add Task" class="btn">
@@ -26,24 +26,23 @@
             </div>
           </div>
           <div class="card-action">
-            <h5 id="task-title">Tasks</h5>
+            <div id="task-title">Task</div>
             <div class="input-field col s12">
-              <input type="text" name="filter" id="filter">
-              <label for="filter">Filter Tasks</label>
+              <input type="text" name="filter" id ="filter">
+              <label for="task">Filter Task</label>
             </div>
             <ul class="collection"></ul>
-            <a href="#" class="clear-tasks btn black">Clear Tasks</a>
+            <a href="#" class="clear-tasks btn black">Clear Task</a>
           </div>
         </div>
-      </div>
+      </div>    
     </div>
   </div>
-
   <script
-  src="https://code.jquery.com/jquery-3.2.1.js"
-  integrity="sha256-DZAnKJ/6XZ9si04Hgrsxu/8s717jcIzLy3oi35EouyE="
+  src="https://code.jquery.com/jquery-3.5.1.min.js"
+  integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0="
   crossorigin="anonymous"></script>
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.100.2/js/materialize.min.js"></script>
-  <script src="app.js"></script>
+ <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.min.js"></script> 
+<script src="app.js"></script>
 </body>
 </html>
